fix: add text-overflow

--- a/blocks/element/__title-container/element__title-container.css
+++ b/blocks/element/__title-container/element__title-container.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0 auto 25px;
   width: 246px;
+  height: 30px;
   display: flex;
   justify-content: space-between;
 }
