--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -6,4 +6,7 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
